--- a/LGPL/CommonSoftware/acserrTypes/ws/src/Makefile
+++ b/LGPL/CommonSoftware/acserrTypes/ws/src/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # E.S.O. - ACS project
 #
-# "@(#) $Id: Makefile,v 1.8 2010/10/26 18:20:40 javarias Exp $"
+# "@(#) $Id: Makefile,v 1.9 2012/01/20 22:07:43 tstaig Exp $"
 #
 # Makefile of ........
 #
@@ -44,15 +44,6 @@ xxxxx_OBJECTS   =
 xxxxx_LDFLAGS   =
 xxxxx_LIBS      =
 
-ACSErrTypeMonitorStubs_LIBS := acserr
-ACSErrTypeCommonStubs_LIBS := acserr
-ACSErrTypePythonNativeStubs_LIBS := acserr
-ACSErrTypeCppNativeStubs_LIBS := acserr
-ACSErrTypeJavaNativeStubs_LIBS := acserr
-ACSErrTypeCORBAStubs_LIBS := acserr
-ACSErrTypeDevIOStubs_LIBS := acserr
-ACSErrTICSStubs_LIBS := acserr
-ACSErrTicsTCorrStubs_LIBS := acserr
 #
 # special compilation flags for single c sources
 #yyyyy_CFLAGS   = 
@@ -130,6 +121,7 @@ ACSERRDEF = 	ACSErrTypeOK ACSErrTypeMonitor ACSErrTypeAlarm ACSErrTypeCommon \
 		ACSErrTypePythonNative ACSErrTypeCppNative ACSErrTypeJavaNative \
 		ACSErrTypeCORBA ACSErrTypeDevIO ACSErrTICS ACSErrTicsTCorr \
 		PatternAlarmCleared PatternAlarmTriggered
+
 # Jarfiles and their directories
 #
 JARFILES= 
