--- a/LGPL/CommonSoftware/acsdaemon/ws/src/Makefile
+++ b/LGPL/CommonSoftware/acsdaemon/ws/src/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # PPPPPPPP
 #
-# "@(#) $Id: Makefile,v 1.29 2012/01/21 22:48:11 tstaig Exp $"
+# "@(#) $Id: Makefile,v 1.30 2012/02/05 11:11:01 msekoran Exp $"
 #
 # Makefile of ........
 #
@@ -49,12 +49,11 @@ EXECUTABLES_L   =
 
 #
 # <brief description of xxxxx program>
-acscontainerdaemon_OBJECTS   =	acscontainerdaemon acsContainerHandlerImpl acsdaemonORBTask
-acscontainerdaemon_LIBS      =	acscomponentStubs acsdaemonErrType acsdaemonStubs ACSErrTypeCommon
+acscontainerdaemon_OBJECTS   =  acscontainerdaemon acsContainerHandlerImpl acsdaemonORBTask acsRequest
+acscontainerdaemon_LIBS      =  acscomponentStubs acsdaemonErrType acsdaemonStubs ACSErrTypeCommon acsThread acsQoS ACSErrTypeCommon ACSErrTypeCORBA
 
 acsdaemonStartContainer_OBJECTS   =	acsdaemonStartContainer
 acsdaemonStartContainer_LIBS      =	acscomponentStubs acsdaemonErrType acsdaemonStubs acsutil ACSErrTypeCommon ACSErrTypeCORBA acsQoS acsAlSysSource AcsAlarmSystemStubs
-
 
 acsdaemonStopContainer_OBJECTS   =	acsdaemonStopContainer
 acsdaemonStopContainer_LIBS      =	acscomponentStubs acsdaemonErrType acsdaemonStubs acsutil ACSErrTypeCommon ACSErrTypeCORBA acsQoS acsAlSysSource AcsAlarmSystemStubs
