--- a/LGPL/CommonSoftware/ACSLaser/acs-jms/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/acs-jms/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acsncErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/junit-4.8.2.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/JavaContainerError.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
